--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -27,18 +27,22 @@
                 text-align: center;
                 margin-top: 5%;
              }
-             & #seach{
+             & #seachdiv{
 
-                & input{
+                & #seach{
                     width: 80%;
-                    height: 40px;
+                    height: 50px;
                     float: auto;
-                    margin-top:1.5%;
+                    margin-top:1.3%;
                     border: solid 1px white;
                     border-radius: 10px;
                     padding-left: 30px;
-                    font-size: 20px;
+                    font-size: 25px;
                     background-color:#7C7C7C;
+                    color:#F5F5F5
+                }
+                & ::placeholder{
+                    color: #F5F5F5;
                 }
              }
              & #nameLogin{
