--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -19,7 +19,7 @@
            & .divSup{
             background-color: #262525;
              display:grid;
-             grid-template-columns: 20% 60% 20%;
+             grid-template-columns: 20% 55% 20%;
 
              & #nameEmpresa{
                 height: 50%;
@@ -40,6 +40,21 @@
                     font-size: 25px;
                     background-color:#7C7C7C;
                     color:#F5F5F5
+                }
+                & #btnSearch{
+                    width: 150px;
+                    height: 50px;
+                    background-color: #316BB8;
+                    margin: 10px;
+                    border: solid 1px white;
+                    border-radius: 5%;
+                    color:#F5F5F5;
+                    font-size: 18px;
+                    cursor: pointer;
+
+                }
+                & #btnSearch:hover{
+                    box-shadow: 1px 1px 10px 1px rgb(244, 243, 243);
                 }
                 & ::placeholder{
                     color: #F5F5F5;
