--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -27,17 +27,32 @@
                 text-align: center;
                 margin-top: 5%;
              }
-             & #seachdiv{
+             & #searchdiv{
+                display: grid;
+                grid-template-columns: 50px 60% 150px;
 
-                & #seach{
-                    width: 80%;
+                & #quantInput{
                     height: 50px;
                     float: auto;
-                    margin-top:1.3%;
+                    margin-top:10px;
+                    border: solid 1px white;
+                    border-radius: 10px;
+                    padding-left: 15px;
+                    font-size: 25px;
+                    background-color:#7C7C7C;
+                    color:#F5F5F5
+                }
+
+                & #search{
+
+                    height: 50px;
+                    float: auto;
+                    margin-top:10px;
                     border: solid 1px white;
                     border-radius: 10px;
                     padding-left: 30px;
                     font-size: 25px;
+                    margin-left: 15px;
                     background-color:#7C7C7C;
                     color:#F5F5F5
                 }
@@ -45,9 +60,12 @@
                     width: 150px;
                     height: 50px;
                     background-color: #316BB8;
-                    margin: 10px;
+                    margin-top: 10px;
+                    margin-left: 5px;
+                    margin-right: 10px;
                     border: solid 1px white;
                     border-radius: 5%;
+                    float: left;
                     color:#F5F5F5;
                     font-size: 18px;
                     cursor: pointer;
@@ -74,14 +92,45 @@
 
             & .divInfLisOfSales{
                 background-color: white;
+          
                 display: grid;
                 grid-template-rows: 72% 28%;
 
                 & .divListSales{
+                    height: 550px;
+                    padding-bottom: 50px;
+                    color: #262525;
 
+                    & #md-dv-li{
+                        height: 45px;
+                        background-color: #0d2663;
+                        color:white;
+
+                        &  #md-ul-li{
+
+                            & #md-li{
+                                padding-top:10px;
+                                padding-left: 15px;
+                                text-transform: uppercase;
+                                display: grid;
+                                grid-template-columns: 80px 100px 700px 150px 150px 150px;
+                            }
+                        }
+                    }
                 }
                 & .divsaleTot{
                     background-color: #454944;
+                }
+                
+                & ol{
+                    height: 100%;
+                    overflow: scroll;
+                    margin-left: 5px;
+                    padding-left: 50px;
+                    margin-top: -1px;
+                    & li{
+                        font-size: 25px;
+                    }
                 }
             }
             & .divInfSales{
@@ -91,4 +140,7 @@
            }
         }
     }
+}
+.liProdutos{
+    color: #262525;
 }
