--- a/src/components/styleListPdvComponent.css
+++ b/src/components/styleListPdvComponent.css
@@ -1,6 +1,18 @@
 .li-list-product{
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: -35px;
+    height: 35px;
     display: grid;
-    grid-template-columns: 100px 750px 150px 150px 150px;
+    padding-top: 4px;
+    padding-left: 5px;
+    border: 1px solid black;
+    grid-template-columns: 100px 100px 600px 150px 130px 100px;
+    
+    & label{
+        color:black;
+    }
 }
 li#id1, li#id3, li#id5, li#id7, li#id9, li#id11, li#id13, li#id15, li#id17, li#id19, li#id21, li#id23, li#id25{
     background-color: rgb(213, 213, 213);
