--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -119,7 +119,73 @@
                     }
                 }
                 & .divsaleTot{
+                    display: grid;
+                    grid-template-columns: 50% 50%;
                     background-color: #454944;
+
+                    & #desItemTot{
+                        display: grid;
+                        grid-template-rows: 50% 50%;
+
+                        & #qidqiv{
+                            display: grid;
+                            grid-template-columns: 50% 50%;
+
+                            & #qid{
+                                float: left;
+                                padding-left: 50%;
+                                font-size: 30px;
+                            }
+                            & #qiv{
+                                float: left;
+                                margin-left: 45px;
+                                font-size: 30px;
+                            }
+                        }
+                        & #of{
+
+                            & #desconto{
+                                width: 90px;
+                                height: 45px;
+                                float: left;
+                                margin-top: 40px;
+                                margin-left: 25%;
+                                float: auto;
+                                margin-top:10px;
+                                border: solid 1px white;
+                                border-radius: 10px;
+                                font-size: 20px;
+                                text-align: center;
+                                background-color:#7C7C7C;
+                                color:#F5F5F5
+                   
+                                }
+                            }
+                        }
+
+                    }
+                    & #vTotal{
+                        display: grid;
+                        grid-template-columns: 50% 50%;
+
+                        & #infTotal{
+                            color: white;
+                            float: left;
+                            font-size: 50px;
+                            margin-top: 20%;
+                            padding-right: 0px;
+                            margin-right: 0px;
+                            margin-left: 10%;
+                        }
+                        & #vTot{
+                            color: white;
+                            float: left;
+                            font-size: 60px;
+                            margin-top: 18%;
+                            margin-left: 10px;
+                            padding-left: 0px;
+                        }
+                    }
                 }
                 
                 & ol{
