--- a/src/components/styleListPdvComponent.css
+++ b/src/components/styleListPdvComponent.css
@@ -8,7 +8,7 @@
     padding-top: 4px;
     padding-left: 5px;
     border: 1px solid black;
-    grid-template-columns: 100px 600px 100px 150px 130px 100px;
+    grid-template-columns: 100px 600px 100px 150px 130px 100px 100px;
     
     & label{
         color:black;
@@ -17,4 +17,22 @@
 li#id1, li#id3, li#id5, li#id7, li#id9, li#id11, li#id13, li#id15, li#id17, li#id19, li#id21, li#id23, li#id25{
     background-color: rgb(213, 213, 213);
 
+}
+.btn-delete-li{
+    background-image: url("../assets/lixeira-de-reciclagem.png");
+    background-repeat: no-repeat;
+    background-size: 35px 35px;
+
+}
+#descontoProduto{
+    width: 55px;
+    height: 35px;
+    margin-top:-4px;
+    border: none;
+    border: solid 1px white;
+    border-radius: 5px;
+    background-color:#209d79;
+    text-align: center;
+    color: aliceblue;
+    font-size: 20px;
 }
