--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -189,7 +189,7 @@
                 }
                 
                 & ol{
-                    height: 100%;
+                    height: 115%;
                     overflow: scroll;
                     margin-left: 0px;
                     padding-left: 50px;
@@ -199,12 +199,12 @@
                         font-size: 25px;
 
                         & button{
-                            width: 40px;
+                            width: 35px;
                             height: 35px;
                             float: left;
                             margin-top:-2px;
                             border: none;
-                            background-color: #316BB8;
+                            background-color: rgb(195, 230, 218);
                             cursor: pointer;
                         }
                     }
