--- a/src/pages/pdv/pdvcss.css
+++ b/src/pages/pdv/pdvcss.css
@@ -118,52 +118,72 @@
                         }
                     }
                 }
-                & .divsaleTot{
+                & .divSaleTot{
                     display: grid;
-                    grid-template-columns: 50% 50%;
+                    grid-template-columns: 25% 75%;
                     background-color: #454944;
 
-                    & #desItemTot{
-                        display: grid;
-                        grid-template-rows: 50% 50%;
+                    & #tot{
+                        display:grid;
+                        grid-template-columns: 50% 50%;
 
-                        & #qidqiv{
-                            display: grid;
-                            grid-template-columns: 50% 50%;
-
-                            & #qid{
-                                float: left;
-                                padding-left: 50%;
-                                font-size: 30px;
-                            }
-                            & #qiv{
-                                float: left;
-                                margin-left: 45px;
-                                font-size: 30px;
-                            }
+                        & h1{
+                            width: 100%;
+                            height: 70px;
+                            margin-top: 85px;
+                            text-align: center;
+                            padding-top: 25px;
+                            font-size: 50px;
                         }
-                        & #of{
-
-                            & #desconto{
-                                width: 90px;
-                                height: 45px;
-                                float: left;
-                                margin-top: 40px;
-                                margin-left: 25%;
-                                float: auto;
-                                margin-top:10px;
-                                border: solid 1px white;
-                                border-radius: 10px;
-                                font-size: 20px;
-                                text-align: center;
-                                background-color:#7C7C7C;
-                                color:#F5F5F5
-                   
-                                }
-                            }
+                        & #vTotal{
+                            margin-left: -5px;
                         }
-
                     }
+                    & #methodPayment{
+
+                        display: grid;
+                        grid-template-columns: 50% 50%;
+                        & #payment{
+                            display: grid;
+                            grid-template-rows: 50px 50px;
+                            padding-top: 70px;
+                            padding-left: 60px;
+                            padding-right: 60px;
+
+                            & select{
+                                font-size: 30px;
+                                padding-left: 10px;
+                                background-color: #e3e8e8;
+                                color: black;
+                                border-radius: 10px;
+                            }
+                        }
+                        & #finish{
+
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            & button{
+                                width: 230px;
+                                height: 50px;
+                                margin-top: 25px;
+                                font-size: 25px;
+                                background-color: #224566;
+                                border:solid 2px white;
+                                color: white;
+                                cursor: pointer; 
+                                border-radius: 10px;
+                            }
+                            & button:hover{
+                                border:solid 1px #262525;
+                                box-shadow: 1px 1px 13px white;
+                            }
+                        }
+                    }
+                    
+
+                }
                     & #vTotal{
                         display: grid;
                         grid-template-columns: 50% 50%;
